--- a/To do list/index.html
+++ b/To do list/index.html
@@ -37,7 +37,7 @@
         <li>Click the clear button to clear all todos from list</li>
         <li>Click the Save button to save your todos to access them later even if you exit the browser </li>
     </ul>
-    </div>>
+    </div>
     <div id = "tipsCatFactsOverlay">
         <ul class="tipsCatFacts">
             
